* Added comments to the test files